b=408623, fx3 plugin printing on windows broken, r=biesi,sr=roc